# console_calc

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
apps/: compile_time_constants.h  console_assignment.cpp  console_assignment.h  console_binding_facade.cpp  console_binding_facade.h  console_calc_app.cpp  console_calc_app.h  console_calc_main.cpp  console_command.cpp  console_command.h  console_command_executor.cpp  console_command_executor.h  console_history.cpp  console_history.h  console_line_editor.cpp  console_line_editor.h  console_listing.cpp  console_listing.h  console_mode.cpp  console_mode.h  console_session.cpp  console_session.h  console_session_engine.cpp  console_session_engine.h  currency_catalog.h  currency_definition_materializer.cpp  currency_definition_materializer.h  currency_rate_parser.cpp  currency_rate_parser.h  currency_rate_provider.cpp  currency_rate_provider.h  expression_environment.cpp  expression_environment.h  expression_expansion_support.cpp  expression_expansion_support.h
bindings/c_api/: console_binding_c_api.cpp
bindings/facade/: console_binding_facade.cpp
bindings/wasm/: console_wasm_entry.cpp
docs/: architecture.md  basic_functions_plan.md  development.md  grammar.md  wasm_extension_plan.md
include/console_calc/: builtin_function.h  console_binding_c_api.h  console_binding_facade.h  currency_rate_provider.h  error_info.h  expression_ast.h  expression_error.h  expression_parser.h  scalar_value.h  session_environment.h  special_form.h  value.h  value_format.h  value_utils.h
src/: builtin_function.cpp  console_binding_c_api.cpp  console_binding_facade.cpp  error_info.cpp  expression_ast_parser.cpp  expression_ast_parser.h  expression_ast_parser_internal.h  expression_ast_special_forms.cpp  expression_evaluator.cpp  expression_evaluator.h  expression_evaluator_builtins.cpp  expression_evaluator_internal.h  expression_evaluator_special_forms.cpp  expression_parser.cpp  expression_tokenizer.cpp  expression_tokenizer.h  geodesy.cpp  geodesy.h  scalar_math.cpp  scalar_math.h  scalar_value.cpp  special_form.cpp  value_format.cpp  value_utils.cpp
tests/: CMakeLists.txt  console_binding_c_api_test.cpp  console_binding_facade_test.cpp  console_calc_app_test.cpp  console_calc_cli_test.cpp  console_command_test.cpp  console_history_test.cpp  console_session_basic_test.cpp  console_session_definition_test.cpp  console_session_engine_test.cpp  console_session_list_test.cpp  console_session_listing_test.cpp  console_session_test.cpp  console_session_test_support.h  console_test_utils.h  currency_support_test.cpp  expression_case_loader.cpp  expression_case_loader.h  expression_cases.txt  expression_conformance_ast_test.cpp  expression_conformance_checks.h  expression_conformance_semantics_test.cpp  expression_conformance_signature_test.cpp  expression_conformance_test.cpp  expression_conformance_test_support.h  expression_conformance_value_test.cpp  smoke_test.cpp  value_format_test.cpp
web/: AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest
web/src/: app.ts  main.ts  styles.css
web/src/bridge/: console-wasm.ts
web/src/ui/: display-settings-dialog.ts  display-settings.ts  map-pane-view.ts  pane-controls.ts  pane-renderers.ts  panes-view.ts  plot-pane-view.ts  plot-support.ts  prompt-history.ts  prompt-view.ts  shell-split.ts  stack-pane-renderers.ts  stack-pane-view.ts  transcript-renderer.ts  transcript-view.ts
